--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0461.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0461.html
@@ -68,9 +68,9 @@
             <ins class="alt" title="nlp 1.00">μετ’</ins>
           </span>
         </span>
-        <span id="w_11" class="ocr_word" title="bbox 1706 358 1799 388" lang="grc">
+        <span id="w_11_0" class="ocr_word" title="bbox 1706 358 1799 388">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὐ-</ins>
+            <ins class="alt" title="nlp 2.00">αὐτοῦ</ins>
           </span>
         </span>
       </span>
@@ -78,11 +78,6 @@
         <span id="w_12" class="ocr_word" title="bbox 44 432 76 466">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_13" class="ocr_word" title="bbox 99 430 185 461" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 234 411 544 476" lang="grc">
@@ -201,16 +196,11 @@
         </span>
         <span id="w_37" class="ocr_word" title="bbox 1651 567 1797 621" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτο-</ins>
+            <ins title="nlp 2.00">αὐτοκράτορι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 97 641 1839 714">
-        <span id="w_38" class="ocr_word" title="bbox 97 641 294 711" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κράτορι</ins>
-          </span>
-        </span>
         <span id="w_39" class="ocr_word" title="bbox 322 641 686 710" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπομοσάμενος</ins>
@@ -1425,9 +1415,9 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_275" class="ocr_word" title="bbox 1604 2741 1800 2806" lang="grc">
+        <span id="w_275_0" class="ocr_word" title="bbox 1604 2741 1800 2806">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὀφθαλ-</ins>
+            <ins class="alt" title="nlp 2.00">ὀφθαλμὴ</ins>
           </span>
         </span>
       </span>
