--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0515.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0515.html
@@ -381,14 +381,14 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_73" class="ocr_word" title="bbox 1328 869 1631 929" lang="grc">
+        <span id="w_73_0" class="ocr_word" title="bbox 1328 869 1631 929">
           <span class="alternatives">
-            <ins title="nlp 2.00">κασιώτιδος</ins>
+            <ins class="alt" title="nlp 2.00">Κασιώτιδος</ins>
           </span>
         </span>
-        <span id="w_74" class="ocr_word" title="bbox 1670 867 1832 933" lang="grc">
+        <span id="w_73_1" class="ocr_word" title="bbox 1328 869 1631 929">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάσης</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -591,7 +591,7 @@
         </span>
         <span id="w_113" class="ocr_word" title="bbox 1554 1175 1833 1242" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Αραμισός,</ins>
+            <ins title="nlp 2.00">Αραμισός,</ins>
           </span>
         </span>
       </span>
@@ -683,19 +683,19 @@
             <ins class="alt" title="nlp 1.00">τρία</ins>
           </span>
         </span>
-        <span id="w_131" class="ocr_word" title="bbox 1479 1332 1642 1394" lang="grc">
+        <span id="w_131_0" class="ocr_word" title="bbox 1479 1332 1642 1394">
           <span class="alternatives">
-            <ins title="nlp 2.00">φίλιαι,</ins>
+            <ins class="alt" title="nlp 2.00">Τίλια,</ins>
+          </span>
+        </span>
+        <span id="w_131_1" class="ocr_word" title="bbox 1479 1332 1642 1394">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_132" class="ocr_word" title="bbox 1691 1330 1748 1382" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τό</ins>
-          </span>
-        </span>
-        <span id="w_133" class="ocr_word" title="bbox 1786 1350 1835 1381" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τε</ins>
           </span>
         </span>
       </span>
