--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0565.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0565.html
@@ -159,7 +159,7 @@
         </span>
         <span id="w_29_0" class="ocr_word" title="bbox 1355 465 1533 532">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[οὗτοι]</ins>
+            <ins class="alt" title="nlp 2.00">οὗτοι]</ins>
           </span>
         </span>
         <span id="w_29_1" class="ocr_word" title="bbox 1355 465 1533 532">
@@ -349,7 +349,7 @@
       <span class="ocr_line" title="bbox 139 847 1826 920">
         <span id="w_67" class="ocr_word" title="bbox 139 871 168 902">
           <span class="alternatives">
-            <ins title="nlp 2.00">*ἀνελθόντες</ins>
+            <ins title="nlp 2.00">ἀνελθόντες</ins>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 566 869 649 899" lang="grc">
