--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0324.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0324.html
@@ -242,12 +242,12 @@
         </span>
         <span id="w_45_0" class="ocr_word" title="bbox 1663 1274 1747 1338">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(οὐ</ins>
+            <ins title="nlp 2.00">(οὐ</ins>
           </span>
         </span>
         <span id="w_45_1" class="ocr_word" title="bbox 1663 1274 1747 1338">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">γὰρ</ins>
           </span>
         </span>
       </span>
