--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0567.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0567.html
@@ -1459,7 +1459,7 @@
       <span class="ocr_line" title="bbox 225 2878 577 2936">
         <span id="w_283" class="ocr_word" title="bbox 225 2885 249 2924" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">3 δὴ r: δὲ C</ins>
+            <ins title="nlp 2.00">δὴ r: δὲ C</ins>
           </span>
         </span>
       </span>
