--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0517.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0517.html
@@ -444,21 +444,21 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_85" class="ocr_word" title="bbox 1594 956 1844 1022" lang="grc">
+        <span id="w_85_0" class="ocr_word" title="bbox 1594 956 1844 1022">
           <span class="alternatives">
-            <ins title="nlp 2.00">καταπρά-</ins>
+            <ins class="alt" title="nlp 2.00">καταπράξομαι.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 99 1028 1906 1097">
-        <span id="w_86" class="ocr_word" title="bbox 99 1048 133 1080">
+        <span id="w_86_0" class="ocr_word" title="bbox 99 1048 133 1080">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00">D</ins>
           </span>
         </span>
-        <span id="w_87" class="ocr_word" title="bbox 160 1035 314 1091" lang="grc">
+        <span id="w_86_1" class="ocr_word" title="bbox 99 1048 133 1080">
           <span class="alternatives">
-            <ins title="nlp 2.00">ξομαι.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 390 1045 547 1087" lang="grc">
@@ -499,11 +499,6 @@
         <span id="w_95" class="ocr_word" title="bbox 1757 1053 1841 1085" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_96" class="ocr_word" title="bbox 1866 1055 1906 1087">
-          <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
