--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0325.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0325.html
@@ -1482,11 +1482,6 @@
             <ins class="alt" title="nlp 2.00">῾an</ins>
           </span>
         </span>
-        <span id="w_283_1" class="ocr_word" title="bbox 484 2804 561 2840">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_284" class="ocr_word" title="bbox 592 2800 845 2857" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">θερινοῦ?’</ins>
@@ -1514,12 +1509,7 @@
         </span>
         <span id="w_289" class="ocr_word" title="bbox 1282 2793 1404 2837" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατὰ</ins>
-          </span>
-        </span>
-        <span id="w_290" class="ocr_word" title="bbox 1428 2794 1517 2836">
-          <span class="alternatives">
-            <ins title="nlp 2.00">add</ins>
+            <ins title="nlp 2.00">κατὰ add Brockhoffius</ins>
           </span>
         </span>
       </span>
