--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0516.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0516.html
@@ -615,7 +615,7 @@
         </span>
         <span id="w_114" class="ocr_word" title="bbox 311 1347 563 1415" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Ρωμαίων</ins>
+            <ins title="nlp 2.00">Ρωμαίων</ins>
           </span>
         </span>
         <span id="w_115" class="ocr_word" title="bbox 599 1350 881 1416" lang="grc">
@@ -1521,18 +1521,18 @@
             <ins class="alt" title="nlp 1.00">ἐνδεξόμενος</ins>
           </span>
         </span>
-        <span id="w_289" class="ocr_word" title="bbox 1723 2875 1767 2902">
+        <span id="w_289_0" class="ocr_word" title="bbox 1723 2875 1767 2902">
           <span class="alternatives">
-            <ins title="nlp 2.00">r:</ins>
+            <ins class="alt" title="nlp 2.00">r:</ins>
+          </span>
+        </span>
+        <span id="w_289_1" class="ocr_word" title="bbox 1723 2875 1767 2902">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἐνδειξόμενος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 184 2915 527 2974">
-        <span id="w_291" class="ocr_word" title="bbox 184 2915 463 2974" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δειξόμενος</ins>
-          </span>
-        </span>
         <span id="w_292" class="ocr_word" title="bbox 493 2916 527 2959">
           <span class="alternatives">
             <ins title="nlp 2.00">F</ins>
