--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0264.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0264.html
@@ -425,9 +425,14 @@
             <ins title="nlp 2.00">10</ins>
           </span>
         </span>
-        <span id="w_80" class="ocr_word" title="bbox 398 1028 564 1089" lang="grc">
+        <span id="w_80_0" class="ocr_word" title="bbox 398 1028 564 1089">
           <span class="alternatives">
-            <ins title="nlp 2.00">〈πόλις</ins>
+            <ins class="alt" title="nlp 2.00">(πόλις</ins>
+          </span>
+        </span>
+        <span id="w_80_1" class="ocr_word" title="bbox 398 1028 564 1089">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 602 1030 655 1079" lang="grc">
@@ -458,11 +463,6 @@
         <span id="w_86" class="ocr_word" title="bbox 1419 1027 1746 1093" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διακειμένων</ins>
-          </span>
-        </span>
-        <span id="w_87" class="ocr_word" title="bbox 1771 1047 1902 1094" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">περιφανής)</ins>
           </span>
         </span>
       </span>
