--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0519.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0519.html
@@ -10,15 +10,14 @@
   <body>
     <div class="ocr_page" id="i0519.png">
       <span class="ocr_line" title="bbox 688 874 1252 944">
-        <span id="w_0" class="ocr_word" title="bbox 688 874 1110 944">
+        <span id="w_0_0" class="ocr_word" title="bbox 688 874 1110 944">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">ΑΛΕΞΙΑΣ</ins>
-            <del title="nlp 0.90">Ἀλεξίας</del>
+            <ins class="alt" title="nlp 2.00">ΑΛΕΞΙΑΣ</ins>
           </span>
         </span>
-        <span id="w_1" class="ocr_word" title="bbox 1154 882 1252 942">
+        <span id="w_0_1" class="ocr_word" title="bbox 688 874 1110 944">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΙΔ</ins>
+            <ins class="alt" title="nlp 2.00">ΙΔ</ins>
           </span>
         </span>
       </span>
