--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0327.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0327.html
@@ -152,14 +152,9 @@
             <ins class="alt" title="nlp 2.00">Ῥωμαϊκαῖς</ins>
           </span>
         </span>
-        <span id="w_26_1" class="ocr_word" title="bbox 880 441 1171 509">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_27" class="ocr_word" title="bbox 1214 445 1441 512" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φάλαγξι.</ins>
+            <ins title="nlp 2.00">φάλαγξι. πνεύσαντος</ins>
           </span>
         </span>
       </span>
