--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0328.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0328.html
@@ -967,19 +967,9 @@
             <ins class="alt" title="nlp 2.00">ἂν</ins>
           </span>
         </span>
-        <span id="w_184_1" class="ocr_word" title="bbox 710 1842 776 1895">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_185_0" class="ocr_word" title="bbox 800 1867 830 1910">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἢ</ins>
-          </span>
-        </span>
-        <span id="w_185_1" class="ocr_word" title="bbox 800 1867 830 1910">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_186" class="ocr_word" title="bbox 859 1866 949 1910" lang="grc">
@@ -994,7 +984,7 @@
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1256 1845 1539 1905" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀκινδύνως</ins>
+            <ins title="nlp 2.00">ἀκινδύνως αὐτὸς καταλάβῃ</ins>
           </span>
         </span>
       </span>
@@ -1397,12 +1387,12 @@
         </span>
         <span id="w_270_0" class="ocr_word" title="bbox 1651 2545 1757 2608">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+            <ins title="nlp 2.00">(καὶ </ins>
           </span>
         </span>
         <span id="w_270_1" class="ocr_word" title="bbox 1651 2545 1757 2608">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">γὰρ</ins>
           </span>
         </span>
       </span>
