--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0266.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0266.html
@@ -425,9 +425,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 143 1035 1893 1104">
-        <span id="w_80" class="ocr_word" title="bbox 143 1035 465 1104" lang="grc">
+        <span id="w_80_0" class="ocr_word" title="bbox 143 1035 465 1104">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἀδριανοῦ</ins>
+            <ins class="alt" title="nlp 2.00">10</ins>
+          </span>
+        </span>
+        <span id="w_80_1" class="ocr_word" title="bbox 143 1035 465 1104">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Ἀδριανοῦ</ins>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 510 1059 609 1089" lang="grc">
@@ -1365,18 +1370,13 @@
             <ins class="alt" title="nlp 2.00">μεσαίχμιον</ins>
           </span>
         </span>
-        <span id="w_261_1" class="ocr_word" title="bbox 1775 2588 1893 2639">
+        <span id="w_261_1_0" class="ocr_word" title="bbox 1775 2588 1893 2639">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἀπο–</ins>
+            <ins class="alt" title="nlp 2.00">ἀποχρῶν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 214 2663 1889 2733">
-        <span id="w_262" class="ocr_word" title="bbox 214 2665 344 2723" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χρῶν</ins>
-          </span>
-        </span>
         <span id="w_263" class="ocr_word" title="bbox 390 2677 512 2722" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
@@ -1486,9 +1486,14 @@
             <ins class="alt" title="nlp 1.00">ἑτοιμαζομένου</ins>
           </span>
         </span>
-        <span id="w_285" class="ocr_word" title="bbox 1775 2824 1952 2888">
+        <span id="w_285_0" class="ocr_word" title="bbox 1775 2824 1952 2888">
           <span class="alternatives">
-            <ins title="nlp 2.00">πόρρωθεν</ins>
+            <ins class="alt" title="nlp 2.00">πόρρωθεν</ins>
+          </span>
+        </span>
+        <span id="w_285_1" class="ocr_word" title="bbox 1775 2824 1952 2888">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">V.</ins>
           </span>
         </span>
       </span>
