--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0520.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0520.html
@@ -611,9 +611,14 @@
             <ins title="nlp 2.00">Εὐμάθιος</ins>
           </span>
         </span>
-        <span id="w_119" class="ocr_word" title="bbox 1359 1260 1509 1329" lang="grc">
+        <span id="w_119_0" class="ocr_word" title="bbox 1359 1260 1509 1329">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀνὴρ</ins>
+            <ins class="alt" title="nlp 2.00">(ἀνὴρ</ins>
+          </span>
+        </span>
+        <span id="w_119_1" class="ocr_word" title="bbox 1359 1260 1509 1329">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_120" class="ocr_word" title="bbox 1548 1262 1602 1311" lang="grc">
@@ -624,11 +629,6 @@
         <span id="w_121" class="ocr_word" title="bbox 1640 1264 1784 1322" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὗτος</ins>
-          </span>
-        </span>
-        <span id="w_122" class="ocr_word" title="bbox 1824 1261 1907 1312" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐπηβολώτατος</ins>
           </span>
         </span>
       </span>
@@ -814,23 +814,18 @@
             <ins class="alt" title="nlp 1.00">μέντοι</ins>
           </span>
         </span>
-        <span id="w_159" class="ocr_word" title="bbox 1677 1587 1906 1639" lang="grc">
+        <span id="w_159_0" class="ocr_word" title="bbox 1677 1587 1906 1639">
           <span class="alternatives">
-            <ins title="nlp 2.00">στρατιω-</ins>
+            <ins class="alt" title="nlp 2.00">στρατιωτικῆς</ins>
           </span>
         </span>
-        <span id="w_160" class="ocr_word" title="bbox 1935 1591 1973 1624">
+        <span id="w_159_1" class="ocr_word" title="bbox 1677 1587 1906 1639">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ρ.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 209 1644 1911 1717">
-        <span id="w_161" class="ocr_word" title="bbox 209 1659 345 1717" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τικῆς</ins>
-          </span>
-        </span>
         <span id="w_162" class="ocr_word" title="bbox 381 1651 611 1710" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">παιδείας</ins>
@@ -1160,9 +1155,14 @@
             <ins class="alt" title="nlp 1.00">λέγεται</ins>
           </span>
         </span>
-        <span id="w_228" class="ocr_word" title="bbox 1080 2190 1221 2252" lang="grc">
+        <span id="w_228_0" class="ocr_word" title="bbox 1080 2190 1221 2252">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὐδὲ</ins>
+            <ins class="alt" title="nlp 2.00">(οὐδὲ</ins>
+          </span>
+        </span>
+        <span id="w_228_1" class="ocr_word" title="bbox 1080 2190 1221 2252">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_229" class="ocr_word" title="bbox 1257 2216 1349 2262" lang="grc">
@@ -1178,11 +1178,6 @@
         <span id="w_231" class="ocr_word" title="bbox 1655 2195 1908 2262" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπιβαλών</ins>
-          </span>
-        </span>
-        <span id="w_232" class="ocr_word" title="bbox 1930 2215 1974 2247">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ν.</ins>
           </span>
         </span>
       </span>
@@ -1353,9 +1348,9 @@
             <ins class="alt" title="nlp 1.00">ἀναμεταξὺ</ins>
           </span>
         </span>
-        <span id="w_266" class="ocr_word" title="bbox 1796 2509 1906 2557" lang="grc">
+        <span id="w_266_0" class="ocr_word" title="bbox 1796 2509 1906 2557">
           <span class="alternatives">
-            <ins title="nlp 2.00">διαπλᾳσόμενος</ins>
+            <ins class="alt" title="nlp 2.00">διαπλῳσόμενος</ins>
           </span>
         </span>
       </span>
@@ -1363,11 +1358,6 @@
         <span id="w_267" class="ocr_word" title="bbox 143 2607 186 2640">
           <span class="alternatives">
             <ins title="nlp 2.00">30</ins>
-          </span>
-        </span>
-        <span id="w_268" class="ocr_word" title="bbox 209 2578 521 2646" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πλῳσόμενος</ins>
           </span>
         </span>
         <span id="w_269" class="ocr_word" title="bbox 565 2590 796 2650" lang="grc">
