--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0462.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0462.html
@@ -425,9 +425,14 @@
             <ins class="alt" title="nlp 1.00">10</ins>
           </span>
         </span>
-        <span id="w_81" class="ocr_word" title="bbox 212 1044 635 1110" lang="grc">
+        <span id="w_81_0" class="ocr_word" title="bbox 212 1044 635 1110">
           <span class="alternatives">
-            <ins title="nlp 2.00">[Λογγιβαρδίας]</ins>
+            <ins class="alt" title="nlp 2.00">[Λογγιβαρδίας]</ins>
+          </span>
+        </span>
+        <span id="w_81_1" class="ocr_word" title="bbox 212 1044 635 1110">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_82" class="ocr_word" title="bbox 683 1046 919 1107" lang="grc">
@@ -458,11 +463,6 @@
         <span id="w_87" class="ocr_word" title="bbox 1698 1060 1819 1107" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
-          </span>
-        </span>
-        <span id="w_88" class="ocr_word" title="bbox 1858 1059 1912 1090" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
       </span>
@@ -502,23 +502,18 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_96" class="ocr_word" title="bbox 1817 1137 1909 1168" lang="grc">
+        <span id="w_96_0" class="ocr_word" title="bbox 1817 1137 1909 1168">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὐ-</ins>
+            <ins class="alt" title="nlp 2.00">αύτοῦ</ins>
           </span>
         </span>
-        <span id="w_97" class="ocr_word" title="bbox 1933 1139 1964 1170">
+        <span id="w_96_1" class="ocr_word" title="bbox 1817 1137 1909 1168">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 206 1194 1913 1265">
-        <span id="w_98" class="ocr_word" title="bbox 206 1217 291 1249" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
         <span id="w_99" class="ocr_word" title="bbox 330 1214 655 1265" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">παρασκευὴν</ins>
@@ -593,16 +588,11 @@
         </span>
         <span id="w_113" class="ocr_word" title="bbox 1793 1288 1910 1340" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συγ-</ins>
+            <ins title="nlp 2.00">συγχωρεῖν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 205 1348 1913 1419">
-        <span id="w_114" class="ocr_word" title="bbox 205 1359 385 1419" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χωρεῖν</ins>
-          </span>
-        </span>
         <span id="w_115" class="ocr_word" title="bbox 420 1350 658 1405" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπελθὼν</ins>
@@ -1056,9 +1046,9 @@
             <ins title="nlp 2.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_203" class="ocr_word" title="bbox 1807 2051 1916 2117" lang="grc">
+        <span id="w_203_0" class="ocr_word" title="bbox 1807 2051 1916 2117">
           <span class="alternatives">
-            <ins title="nlp 2.00">[τοῦ</ins>
+            <ins class="alt" title="nlp 2.00">[τοῦ</ins>
           </span>
         </span>
       </span>
