--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0331.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0331.html
@@ -863,7 +863,7 @@
         </span>
         <span id="w_162_1" class="ocr_word" title="bbox 1498 1779 1813 1846">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -1078,7 +1078,7 @@
         </span>
         <span id="w_204_1" class="ocr_word" title="bbox 1672 2167 1813 2233">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
