--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0332.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0332.html
@@ -153,12 +153,7 @@
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1363 454 1601 523" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βασιλέως</ins>
-          </span>
-        </span>
-        <span id="w_28" class="ocr_word" title="bbox 1639 475 1896 522" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">οἰκονμηθέντων</ins>
+            <ins title="nlp 2.00">βασιλέως οἰκονομηθέντων</ins>
           </span>
         </span>
       </span>
@@ -430,11 +425,6 @@
             <ins class="alt" title="nlp 2.00">ὢν</ins>
           </span>
         </span>
-        <span id="w_82_1" class="ocr_word" title="bbox 209 1001 282 1054">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_83" class="ocr_word" title="bbox 319 1000 344 1053" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
@@ -477,7 +467,7 @@
         </span>
         <span id="w_91" class="ocr_word" title="bbox 1765 1001 1898 1068" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παρὰ</ins>
+            <ins title="nlp 2.00">παρὰ Β</ins>
           </span>
         </span>
       </span>
@@ -502,11 +492,6 @@
             <ins class="alt" title="nlp 2.00">ἔργου</ins>
           </span>
         </span>
-        <span id="w_96_1" class="ocr_word" title="bbox 1063 1100 1205 1149">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_97" class="ocr_word" title="bbox 1253 1079 1413 1141" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εὐθὺς</ins>
@@ -519,7 +504,7 @@
         </span>
         <span id="w_99" class="ocr_word" title="bbox 1654 1101 1741 1147" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῆς</ins>
+            <ins title="nlp 2.00">τῆς πρὸς</ins>
           </span>
         </span>
       </span>
