--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0572.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0572.html
@@ -99,9 +99,14 @@
             <ins class="alt" title="nlp 1.00">ἐξέπεμψε</ins>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 837 390 1129 459" lang="grc">
+        <span id="w_16_0" class="ocr_word" title="bbox 837 390 1129 459">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πολί|χνιον</ins>
+            <ins class="alt" title="nlp 2.00">(πολί|χνιον</ins>
+          </span>
+        </span>
+        <span id="w_16_1" class="ocr_word" title="bbox 837 390 1129 459">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1165 392 1220 441" lang="grc">
@@ -117,11 +122,6 @@
         <span id="w_19" class="ocr_word" title="bbox 1416 391 1744 455" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐρυμνότατον</ins>
-          </span>
-        </span>
-        <span id="w_20" class="ocr_word" title="bbox 1778 394 1913 459" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παρά</ins>
           </span>
         </span>
       </span>
