--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0268.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0268.html
@@ -480,19 +480,19 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_90" class="ocr_word" title="bbox 1234 1021 1334 1085" lang="grc">
+        <span id="w_90_0" class="ocr_word" title="bbox 1234 1021 1334 1085">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἤ δη</ins>
+            <ins class="alt" title="nlp 2.00">ἤδη</ins>
+          </span>
+        </span>
+        <span id="w_90_1" class="ocr_word" title="bbox 1234 1021 1334 1085">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_91" class="ocr_word" title="bbox 1374 1021 1753 1086" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διεσπάσθησαν</ins>
-          </span>
-        </span>
-        <span id="w_92" class="ocr_word" title="bbox 1791 1039 1912 1084" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">φευγόντων</ins>
           </span>
         </span>
       </span>
