--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0463.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0463.html
@@ -614,16 +614,11 @@
         </span>
         <span id="w_116" class="ocr_word" title="bbox 1693 1276 1815 1311" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συν-</ins>
+            <ins title="nlp 2.00">συνυπήγετο</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 117 1338 1816 1405">
-        <span id="w_117" class="ocr_word" title="bbox 117 1355 334 1403" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">υπήγετο</ins>
-          </span>
-        </span>
         <span id="w_118" class="ocr_word" title="bbox 359 1338 589 1403" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κομητῶν</ins>
@@ -760,16 +755,11 @@
         </span>
         <span id="w_144" class="ocr_word" title="bbox 1665 1509 1817 1560" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προσ-</ins>
+            <ins title="nlp 2.00">προσέρριψαν·</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 118 1570 1817 1638">
-        <span id="w_145" class="ocr_word" title="bbox 118 1570 354 1637" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">έρριψαν·</ins>
-          </span>
-        </span>
         <span id="w_146" class="ocr_word" title="bbox 396 1590 494 1621" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
@@ -797,7 +787,7 @@
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1437 1570 1687 1638" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παρῆσαν</ins>
+            <ins title="nlp 2.00">(παρῆσαν</ins>
           </span>
         </span>
         <span id="w_152" class="ocr_word" title="bbox 1724 1570 1817 1638" lang="grc">
@@ -1351,16 +1341,11 @@
         </span>
         <span id="w_260" class="ocr_word" title="bbox 1699 2504 1821 2566" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Χρι-</ins>
+            <ins title="nlp 2.00">Χριστιανοὺς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 125 2576 1886 2650">
-        <span id="w_261" class="ocr_word" title="bbox 125 2583 359 2644" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στιανοὺς</ins>
-          </span>
-        </span>
         <span id="w_262" class="ocr_word" title="bbox 407 2579 686 2650" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">βαρβάρους</ins>
@@ -1386,14 +1371,14 @@
             <ins class="alt" title="nlp 1.00">ἀλλοκότους</ins>
           </span>
         </span>
-        <span id="w_267" class="ocr_word" title="bbox 1679 2596 1821 2628" lang="grc">
+        <span id="w_267_0" class="ocr_word" title="bbox 1679 2596 1821 2628">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἱππο-</ins>
+            <ins class="alt" title="nlp 2.00">ἱπποτοξότας</ins>
           </span>
         </span>
-        <span id="w_268" class="ocr_word" title="bbox 1844 2602 1886 2633">
+        <span id="w_267_1" class="ocr_word" title="bbox 1679 2596 1821 2628">
           <span class="alternatives">
-            <ins title="nlp 2.00">30</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1401,11 +1386,6 @@
         <span id="w_269" class="ocr_word" title="bbox 75 2684 102 2717">
           <span class="alternatives">
             <ins title="nlp 2.00">C</ins>
-          </span>
-        </span>
-        <span id="w_270" class="ocr_word" title="bbox 128 2663 328 2727" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοξότας</ins>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 357 2663 582 2725" lang="grc">
