--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0333.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0333.html
@@ -708,12 +708,7 @@
         </span>
         <span id="w_135" class="ocr_word" title="bbox 1560 1409 1643 1440" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_136" class="ocr_word" title="bbox 1677 1389 1817 1440" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πόλεγον</ins>
+            <ins title="nlp 2.00">καὶ πόλεμον</ins>
           </span>
         </span>
         <span id="w_137" class="ocr_word" title="bbox 1845 1404 1884 1436">
