--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0522.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0522.html
@@ -1172,9 +1172,9 @@
             <ins class="alt" title="nlp 1.00">τούτοις</ins>
           </span>
         </span>
-        <span id="w_227" class="ocr_word" title="bbox 1925 2278 1965 2312">
+        <span id="w_227_0" class="ocr_word" title="bbox 1925 2278 1965 2312">
           <span class="alternatives">
-            <ins title="nlp 2.00">ρ.</ins>
+            <ins class="alt" title="nlp 2.00">p.</ins>
           </span>
         </span>
       </span>
