--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0575.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0575.html
@@ -468,7 +468,7 @@
       <span class="ocr_line" title="bbox 138 982 1882 1053">
         <span id="w_89" class="ocr_word" title="bbox 294 984 569 1051" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[Μιχαήλ],</ins>
+            <ins title="nlp 2.00">Μιχαήλ],</ins>
           </span>
         </span>
         <span id="w_90" class="ocr_word" title="bbox 610 1005 661 1035" lang="grc">
@@ -1531,7 +1531,7 @@
         </span>
         <span id="w_299" class="ocr_word" title="bbox 415 2856 664 2913" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">15 ἄρεος C</ins>
+            <ins title="nlp 2.00">ἄρεος C</ins>
           </span>
         </span>
         <span id="w_300_0" class="ocr_word" title="bbox 703 2864 756 2902">
