--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0334.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0334.html
@@ -462,11 +462,6 @@
             <ins class="alt" title="nlp 2.00">κατ᾿</ins>
           </span>
         </span>
-        <span id="w_89_0_1" class="ocr_word" title="bbox 1153 1095 1244 1125">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_89_1" class="ocr_word" title="bbox 1153 1095 1244 1125">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">αὐτοῦ</ins>
@@ -474,7 +469,7 @@
         </span>
         <span id="w_90" class="ocr_word" title="bbox 1498 1078 1738 1140" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐξέπεμψε</ins>
+            <ins title="nlp 2.00">ἐξέπεμψε μετὰ </ins>
           </span>
         </span>
       </span>
