--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0271.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0271.html
@@ -1350,7 +1350,7 @@
         </span>
         <span id="w_257" class="ocr_word" title="bbox 611 2689 653 2749" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὅ</ins>
+            <ins title="nlp 2.00">ὅ</ins>
           </span>
         </span>
         <span id="w_258" class="ocr_word" title="bbox 692 2693 753 2751" lang="grc">
