--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0464.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0464.html
@@ -252,16 +252,11 @@
         </span>
         <span id="w_46" class="ocr_word" title="bbox 1768 661 1892 713" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συμ-</ins>
+            <ins title="nlp 2.00">συμπείσειεν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 187 723 1892 794">
-        <span id="w_47" class="ocr_word" title="bbox 187 731 423 793" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πείσειεν,</ins>
-          </span>
-        </span>
         <span id="w_48" class="ocr_word" title="bbox 477 726 543 789" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
@@ -341,16 +336,11 @@
         </span>
         <span id="w_63" class="ocr_word" title="bbox 1800 823 1892 851" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐ-</ins>
+            <ins title="nlp 2.00">αύτόματον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 187 879 1893 950">
-        <span id="w_64" class="ocr_word" title="bbox 187 882 398 950" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τόματον</ins>
-          </span>
-        </span>
         <span id="w_65" class="ocr_word" title="bbox 443 888 689 950" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">συλλογὴν</ins>
